# TTMetal_Density_Scatter

./: README.md  REPRODUCE.md  benchmark_sfpu_density_map.py  numpy_baseline.py
density_map_scatter/: CMakeLists.txt  DOCUMENTATION.md  PERFORMANCE_REPORT.md  PROFILING_REPORT.md  density_map_scatter.cpp  numpy_baseline.py
density_map_scatter/kernels/compute/: overlap_compute.cpp  overlap_compute_geometry.cpp
density_map_scatter/kernels/dataflow/: read_tiles.cpp  read_tiles_geometry.cpp  write_tile.cpp
